Fixed alignment of main content in Employee View

--- a/src/components/Views/GeneralEmployee/Employee.css
+++ b/src/components/Views/GeneralEmployee/Employee.css
@@ -107,7 +107,7 @@
 }
 
 .employee-main-content {
-    margin-left: 25%;
+    margin-left: 12%;
     width: 100%; 
     padding: 20px;
     margin-right: 20px;
